# orbstack-alfred-workflow

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.docs/: orbstack-alfred-workflow-prd.md
tests/: test_parsing.py  test_url_derivation.py
tests/fixtures/: docker_inspect_all.json  docker_ps_all.jsonl
workflow/: .env.example  info.plist
workflow/scripts/: dispatcher.py  helpers.py  script_filter.py
