[project]
name = "orbstack-alfred-workflow"
version = "1.0.0"
description = "Alfred workflow for managing OrbStack Docker containers"
requires-python = ">=3.11"
dependencies = []
authors = [
    {name = "Alfred OrbStack Workflow", email = "dev@example.com"}
]
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/username/orbstack-alfred-workflow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []